--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://reactjs-ecommerce-app.vercel.app/">
+  <meta property="og:url" content="https://tss-react-ecommerce.vercel.app/">
   <meta property="og:title" content="Ecommerce Website">
   <meta property="og:description" content="A Ecommerce Website made with React.js Framework.">
   <meta property="og:image"
@@ -24,7 +24,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://reactjs-ecommerce-app.vercel.app/">
+  <meta property="twitter:url" content="https://tss-react-ecommerce.vercel.app/">
   <meta property="twitter:title" content="Ecommerce Website">
   <meta property="twitter:description" content="A Ecommerce Website made with React.js Framework.">
   <meta property="twitter:image"
